force-app/main/default/objects/QB_Invoice__c/QB_Invoice__c.object-meta.xml
<CustomObject>
    <label>QB Invoice</label>
    <nameField>
        <label>QB Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>