force-app/main/default/objects/QB_Invoice__c/fields/AccountId_del__c.field-meta.xml
<CustomField>
    <fullName>AccountId_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QB Invoices</relationshipLabel>
    <relationshipName>QB_Invoices_del</relationshipName>
    <type>Lookup</type>
</CustomField>