force-app/main/default/objects/QB_Invoice__c/fields/Apply_discount_after_sales_tax__c.field-meta.xml
<CustomField>
    <fullName>Apply_discount_after_sales_tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply discount after sales tax</label>
    <type>Checkbox</type>
</CustomField>