force-app/main/default/objects/QB_Invoice__c/fields/BillAddr__c.field-meta.xml
<CustomField>
    <fullName>BillAddr__c</fullName>
    <label>Billing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>