force-app/main/default/objects/QB_Invoice__c/fields/BillEmail__c.field-meta.xml
<CustomField>
    <fullName>BillEmail__c</fullName>
    <label>Bill Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>