force-app/main/default/objects/QB_Invoice__c/fields/Discount_Percent_Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent_Discount_Value__c</fullName>
    <label>Discount Percent / Discount Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>