force-app/main/default/objects/QB_Invoice__c/fields/HomeBalance__c.field-meta.xml
<CustomField>
    <fullName>HomeBalance__c</fullName>
    <inlineHelpText>Convenience field containing the amount in Balance expressed in terms of the home currency.</inlineHelpText>
    <label>Home Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>