force-app/main/default/objects/QB_Invoice__c/fields/HomeTotalAmt__c.field-meta.xml
<CustomField>
    <fullName>HomeTotalAmt__c</fullName>
    <inlineHelpText>Total amount of the transaction in the home currency. Includes the total of all the charges, allowances and taxes.</inlineHelpText>
    <label>Home Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>