force-app/main/default/objects/QB_Invoice__c/fields/Invoice_Currency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Currency__c</fullName>
    <label>Invoice Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>