force-app/main/default/objects/QB_Invoice__c/fields/Invoice_Qb_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Qb_Id__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Qb Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>