force-app/main/default/objects/QB_Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Partially paid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>DRAFT</fullName>
                <isActive>false</isActive>
                <label>DRAFT</label>
            </value>
            <value>
                <fullName>PUBLISHED</fullName>
                <isActive>false</isActive>
                <label>PUBLISHED</label>
            </value>
            <value>
                <fullName>UNPAID</fullName>
                <isActive>false</isActive>
                <label>UNPAID</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>