force-app/main/default/objects/QB_Invoice__c/fields/Percent_Based_Discount__c.field-meta.xml
<CustomField>
    <fullName>Percent_Based_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Percent Based Discount</label>
    <type>Checkbox</type>
</CustomField>