force-app/main/default/objects/QB_Invoice__c/fields/Qb_Invoice_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Qb_Invoice_Customer_Id__c</fullName>
    <label>Qb Invoice Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>