force-app/main/default/objects/QB_Invoice__c/fields/Qb_Invoice_Sync_Token__c.field-meta.xml
<CustomField>
    <fullName>Qb_Invoice_Sync_Token__c</fullName>
    <label>Qb Invoice Sync Token</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>