force-app/main/default/objects/QB_Invoice__c/fields/Sales_Term__c.field-meta.xml
<CustomField>
    <fullName>Sales_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Term</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Sales Term does not exists. Please contact your Administrator to sync up the Sales Term of QuickBooks, from the QuickBook Setup Page.</errorMessage>
        <filterItems>
            <field>QB_MetaData__c.Type__c</field>
            <operation>equals</operation>
            <value>Term</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>QB_MetaData__c</referenceTo>
    <relationshipLabel>QB Invoices (Sales Term)</relationshipLabel>
    <relationshipName>QB_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>