force-app/main/default/objects/QB_Invoice__c/fields/See_this_Invoice_in_QuickBook__c.field-meta.xml
<CustomField>
    <fullName>See_this_Invoice_in_QuickBook__c</fullName>
    <formula>HYPERLINK(&quot;https://app.qbo.intuit.com/app/invoice?txnId=&quot;+   Invoice_Qb_Id__c , Name ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>See this Invoice in QuickBook</label>
    <type>Text</type>
</CustomField>