force-app/main/default/objects/QB_Invoice__c/fields/ShipAddr__c.field-meta.xml
<CustomField>
    <fullName>ShipAddr__c</fullName>
    <label>Shipping Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>