force-app/main/default/objects/QB_Invoice__c/fields/Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percent__c</fullName>
    <label>Tax Percent</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>