force-app/main/default/objects/QB_Invoice__c/fields/TotalTax__c.field-meta.xml
<CustomField>
    <fullName>TotalTax__c</fullName>
    <label>Total Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>