force-app/main/default/objects/QB_Invoice__c/validationRules/Test_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>Invoice_Date__c  =  TODAY()</errorConditionFormula>
    <errorMessage>Test Error</errorMessage>
</ValidationRule>