force-app/main/default/objects/QB_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Qb_Id__c</columns>
    <columns>Qb_Invoice_Sync_Token__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>