force-app/main/default/objects/QB_Invoice__c/listViews/Todays_Invoices.listView-meta.xml
<ListView>
    <fullName>Todays_Invoices</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Invoice_Qb_Id__c</columns>
    <columns>Qb_Invoice_Sync_Token__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Invoices</label>
</ListView>